--- a/ben.html
+++ b/ben.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header id='myHeader'>
-            <a href="../ben-and-alex.github.io/index.html">Bitch</a>
+            <a href="../ben-and-alex.github.io/index.html">Ben is a</a>
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
