--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </content>
     </main>
     <footer>
-        <a href="../ben-and-alex.github.io/ben.html" class="ref1">Ben is a</a>
+        <a href="../ben-and-alex.github.io/ben.html" class="ref1">Bitcharoo</a>
     </footer>
 </body>
 
