--- a/ben.html
+++ b/ben.html
@@ -16,10 +16,11 @@
         </nav>
         <main>
             <content>
+                <img alt="other middle finger" src="../ben-and-alex.github.io/left.jpg" >
+                <img alt="middle finger" src="../ben-and-alex.github.io/right.jpg">
             </content>
         </main>
         <footer id='myfooter'>
-
         </footer>
     </body>
 </html>
