--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     </nav>
     <main>
         <content>
-
+            <a href="../ben-and-alex.github.io/ben.html" class="ref1">Bitcharoo</a>
         </content>
     </main>
     <footer>
-        <a href="../ben-and-alex.github.io/ben.html" class="ref1">Bitcharoo</a>
+        <img alt="other middle finger" src="../ben-and-alex.github.io/left.jpg" class="left">
+        <img alt="middle finger" src="../ben-and-alex.github.io/right.jpg" class="right">
     </footer>
 </body>
 
