--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <main>
         <content>
-            <a href="../ben-and-alex.github.io/ben.html" class="ref1">Bitcharoo</a>
+            <a href="../ben-and-alex.github.io/index.html">Ben is a</a>
         </content>
     </main>
     <footer>
