--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header id='myHeader'>
-
+        <a href="../ben-and-alex.github.io/ben.html">Ben is a</a>
     </header>
     <nav id='mynav'>
         <noscript>*Javascript must be enabled to see this page.</noscript>
@@ -17,12 +17,9 @@
     </nav>
     <main>
         <content>
-            <a href="../ben-and-alex.github.io/index.html">Ben is a</a>
         </content>
     </main>
     <footer>
-        <img alt="other middle finger" src="../ben-and-alex.github.io/left.jpg" class="left">
-        <img alt="middle finger" src="../ben-and-alex.github.io/right.jpg" class="right">
     </footer>
 </body>
 
