--- a/ben.html
+++ b/ben.html
@@ -8,16 +8,13 @@
     </head>
     <body>
         <header id='myHeader'>
-            <a href="../ben-and-alex.github.io/ben.html" class="ref1">Bitcharoo</a>
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
-
         </nav>
         <main>
             <content>
-                <img alt="other middle finger" src="../ben-and-alex.github.io/left.jpg" >
-                <img alt="middle finger" src="../ben-and-alex.github.io/right.jpg">
+                <a href="../ben-and-alex.github.io/index.html" class="ref1">Bitcharoo</a>
             </content>
         </main>
         <footer id='myfooter'>
