--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     </header>
     <nav id='mynav'>
         <noscript>*Javascript must be enabled to see this page.</noscript>
-
+        <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
     </nav>
     <main>
         <content>
+
         </content>
     </main>
     <footer>
+
     </footer>
 </body>
 
