--- a/ben.html
+++ b/ben.html
@@ -7,17 +7,20 @@
         <link href="../ben-and-alex.github.io/alex.css" type="text/css" rel="stylesheet" media="screen">
     </head>
     <body>
-        <header id='myHeader'>
+        <header>
+
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
+            <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
         </nav>
         <main>
             <content>
                 <a href="../ben-and-alex.github.io/index.html" class="ref1">Bitcharoo</a>
             </content>
         </main>
-        <footer id='myfooter'>
+        <footer>
+
         </footer>
     </body>
 </html>
