--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </content>
     </main>
     <footer>
-
+        <a href="../ben-and-alex.github.io/pics.html">the goods</a>
     </footer>
 </body>
 
