--- a/pics.html
+++ b/pics.html
@@ -17,6 +17,7 @@
         <main>
             <content>
                 <img alt="20s porn" src="../ben-and-alex.github.io/20s.jpeg">
+                <img alt="20s porn" src="../ben-and-alex.github.io/styleshot.jpg">
             </content>
         </main>
         <footer>
