--- a/pics.html
+++ b/pics.html
@@ -18,6 +18,7 @@
             <content>
                 <img alt="20s porn" src="../ben-and-alex.github.io/20s.jpeg">
                 <img alt="20s porn" src="../ben-and-alex.github.io/styleshot.jpg">
+                <img alt="Doctor Sunshine" src="../ben-and-alex.github.io/Manshine.jpg">
             </content>
         </main>
         <footer>
