--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header id='myHeader'>
-        <a href="../ben-and-alex.github.io/ben.html">Ben is a</a>
+        <a href="../ben-and-alex.github.io/ben.html">Justin is a</a>
     </header>
     <nav id='mynav'>
         <noscript>*Javascript must be enabled to see this page.</noscript>
