--- a/ben.html
+++ b/ben.html
@@ -16,7 +16,7 @@
         </nav>
         <main>
             <content>
-                <a href="../ben-and-alex.github.io/index.html" class="ref1">Bitcharoo</a>
+                <a href="../ben-and-alex.github.io/index.html" class="ref1">Benjabitcharoo</a>
             </content>
         </main>
         <footer>
