--- a/ben.html
+++ b/ben.html
@@ -7,8 +7,8 @@
         <link href="../ben-and-alex.github.io/alex.css" type="text/css" rel="stylesheet" media="screen">
     </head>
     <body>
-        <header>
-
+        <header class="bitcharoo">
+            <a href="../ben-and-alex.github.io/index.html" class="ref1">Bitcharoo</a>
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
@@ -16,11 +16,11 @@
         </nav>
         <main>
             <content>
-                <a href="../ben-and-alex.github.io/index.html" class="ref1">Bitcharoo</a>
+
             </content>
         </main>
         <footer>
-
+            <a href="../ben-and-alex.github.io/pics.html">the goods</a>
         </footer>
     </body>
 </html>
