--- a/pics.html
+++ b/pics.html
@@ -20,6 +20,7 @@
                 <img alt="Doctor Sunshine" src="../ben-and-alex.github.io/Manshine.jpg">
                 <img alt="frizzlizard" src="../ben-and-alex.github.io/styleshot.jpg">
                 <img alt="adelf" src="../ben-and-alex.github.io/adelf.jpg">
+                <img alt="mpoppins" src="../ben-and-alex.github.io/mpoppins.jpg">
             </content>
         </main>
         <footer>
