--- a/pics.html
+++ b/pics.html
@@ -21,6 +21,7 @@
                 <img alt="frizzlizard" src="../ben-and-alex.github.io/styleshot.jpg">
                 <img alt="adelf" src="../ben-and-alex.github.io/adelf.jpg">
                 <img alt="mpoppins" src="../ben-and-alex.github.io/mpoppins.jpg">
+                <img alt="scfail" src="../ben-and-alex.github.io/scfail.gif">
             </content>
         </main>
         <footer>
