--- a/pics.html
+++ b/pics.html
@@ -17,7 +17,7 @@
         <main>
             <content>
                 <img alt="20s porn" src="../ben-and-alex.github.io/20s.jpeg">
-                <img alt="Grump" src="../ben-and-alex.github.io/grumpy.jpeg">
+                <img alt="grumpy" src="../ben-and-alex.github.io/grumpy.jpg">
                 <img alt="Doctor Sunshine" src="../ben-and-alex.github.io/Manshine.jpg">
                 <img alt="frizzlizard" src="../ben-and-alex.github.io/styleshot.jpg">
                 <img alt="adelf" src="../ben-and-alex.github.io/adelf.jpg">
