--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </main>
     <footer>
         <a href="../ben-and-alex.github.io/pics.html">the goods</a>
+        <a href="../ben-and-alex.github.io/coolpage.html">cool page</a>
     </footer>
 </body>
 
