--- a/coolpage.html
+++ b/coolpage.html
@@ -11,12 +11,15 @@
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
+            defghtr
         </nav>
         <main>
             <content>
+                fdcvbbfds
             </content>
         </main>
         <footer>
+            <img alt="coonsex" src="../ben-and-alex.github.io/coonsex.jpg">
         </footer>
     </body>
 </html>
