--- a/coolpage.html
+++ b/coolpage.html
@@ -11,11 +11,11 @@
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
-            defghtr
+            Prayers and such.
         </nav>
         <main>
             <content>
-                fdcvbbfds
+                Here are that is satan. Be unto them as unto they are, thy neighbors, blessyou, amen.
             </content>
         </main>
         <footer>
