--- a/ben.html
+++ b/ben.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="bitcharoo">
-            <a href="../ben-and-alex.github.io/index.html" class="ref1">Bitcharoo</a>
+            <a href="../ben-and-alex.github.io/index.html" class="ref1">Benjabitcharoo</a>
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
