--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <footer>
         <a href="../ben-and-alex.github.io/pics.html">the goods</a>
         <a href="../ben-and-alex.github.io/coolpage.html">cool page</a>
+        <a href="../ben-and-alex.github.io/coolpage.html">daemonsnipe</a>
     </footer>
 </body>
 
