--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -14,11 +14,11 @@
         </nav>
         <main>
             <content>
-                hjhjhj
+                <img alt="room" src="../ben-and-alex.github.io/room.JPG">
             </content>
         </main>
         <footer>
-            uhnhunnnuh
+            Praise be unto Satan and all his Nipple-Bitches.
         </footer>
     </body>
 </html>
