--- a/coolpage.html
+++ b/coolpage.html
@@ -4,6 +4,7 @@
         <meta charset='utf-8'>
         <meta name='viewport' content="width=device-width">
         <title>ben-and-alex | web page</title>
+        <link href="../ben-and-alex.github.io/coolpage.css" type="text/css" rel="stylesheet" media="screen">
     </head>
     <body>
         <header class="bitcharoo">
