--- a/coolpage.html
+++ b/coolpage.html
@@ -13,6 +13,7 @@
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
             Prayers and such.
+            <img alt="shrekem" src="../ben-and-alex.github.io/shrekem.jpg">
         </nav>
         <main>
             <content>
