--- a/coolpage.html
+++ b/coolpage.html
@@ -14,6 +14,7 @@
             <noscript>*Javascript must be enabled to see this page.</noscript>
             Prayers and such.
             <img alt="shrekem" src="../ben-and-alex.github.io/shrekem.jpg">
+            <img alt="pooh" src="../ben-and-alex.github.io/pooh.gif">
         </nav>
         <main>
             <content>
