--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <nav id='mynav'>
         <noscript>*Javascript must be enabled to see this page.</noscript>
-        <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
+        <img alt="miss frizzle" src="../ben-and-alex.github.io/juh.jpg">
     </nav>
     <main>
         <content>
