--- a/coolpage.html
+++ b/coolpage.html
@@ -19,6 +19,7 @@
         <main>
             <content>
                 Here are that is satan. Be unto them as unto they are, thy neighbors, blessyou, amen.
+                <img alt="justinisracist" src="../ben-and-alex.github.io/willfuckingsmith.jpg">
             </content>
         </main>
         <footer>
