--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -15,6 +15,7 @@
         </nav>
         <main>
             <content>
+                <img alt="crouch" src="../ben-and-alex.github.io/crouch.JPG">
                 <img alt="room" src="../ben-and-alex.github.io/room.JPG">
             </content>
         </main>
