--- a/coolpage.html
+++ b/coolpage.html
@@ -12,8 +12,9 @@
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
-            Prayers and such.
+            Prayers and such. 
             <img alt="shrekem" src="../ben-and-alex.github.io/shrekem.jpg">
+            Johnny by the numbers, colon-quail. I am doubly served in jail. 
             <img alt="pooh" src="../ben-and-alex.github.io/pooh.gif">
         </nav>
         <main>
