--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -9,6 +9,11 @@
     <body>
         <header class="bitcharoo">
             <a href="../ben-and-alex.github.io/index.html" class="ref1">home</a>
+            Everyone likes a story, so here you go:
+            Doodle my boodle, yon' Scoodley-poodle. 
+            Sunder dun' Bunder shunned Scoodley-poodle, 
+            thus the Clayman-hey-man went trotting off to war 
+            with all the clandestine mysogynist he could carry.
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
