--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <header class="bitcharoo">
-            <a href="../ben-and-alex.github.io/index.html" class="ref1">home</a>
+            <a href="../ben-and-alex.github.io/index.html" class="ref1">HOME</a>
+            
             Everyone likes a story, so here you go:
             Doodle my boodle, yon' Scoodley-poodle. 
             Sunder dun' Bunder shunned Scoodley-poodle, 
