--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -9,12 +9,7 @@
     </head>
     <body>
         <header class="bitcharoo">
-            
-            Everyone likes a story, so here you go:
-            Doodle my boodle, yon' Scoodley-poodle. 
-            Sunder dun' Bunder shunned Scoodley-poodle, 
-            thus the Clayman-hey-man went trotting off to war 
-            with all the clandestine mysogynist he could carry.
+            Once there was a gay clay Klan man named Cain after the laughter of his mistress. 
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
