--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -18,6 +18,7 @@
             <content>
                 <img alt="crouch" src="../ben-and-alex.github.io/crouch.JPG">
                 <img alt="room" src="../ben-and-alex.github.io/room.JPG">
+                <img alt="philanthropods" src="../ben-and-alex.github.io/philanthropods.JPG">
             </content>
         </main>
         <footer>
