--- a/pics.html
+++ b/pics.html
@@ -24,6 +24,7 @@
                 <img alt="mpoppins" src="../ben-and-alex.github.io/mpoppins.jpg">
                 <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
                 <img alt="scfail" src="../ben-and-alex.github.io/scfail.gif">
+                <img alt="dirtyfingers" src="../ben-and-alex.github.io/dirtyfingers.jpg">
             </content>
         </main>
         <footer>
