--- a/coolpage.html
+++ b/coolpage.html
@@ -12,14 +12,14 @@
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
-            Prayers and such. 
+            <p>Prayers and such. </p>
             <img alt="shrekem" src="../ben-and-alex.github.io/shrekem.jpg">
-            Johnny by the numbers, colon-quail. I am doubly served in jail. 
+            <p>Johnny by the numbers, colon-quail. I am doubly served in jail. </p>
             <img alt="pooh" src="../ben-and-alex.github.io/pooh.gif">
         </nav>
         <main>
             <content>
-                Here are that is satan. Be unto them as unto they are, thy neighbors, blessyou, amen.
+                <p>Here are that is satan. Be unto them as unto they are, thy neighbors, blessyou, amen.</p>
                 <img alt="justinisracist" src="../ben-and-alex.github.io/willfuckingsmith.jpg">
             </content>
         </main>
