--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content="width=device-width">
     <title>ben-and-alex | web page</title>
     <link href="../ben-and-alex.github.io/alex.css" type="text/css" rel="stylesheet" media="screen">
-    <p>jelltrole Inc.</p>
+    <p>jelltrole inc.</p>
 </head>
 
 <body>
