--- a/pics.html
+++ b/pics.html
@@ -25,7 +25,7 @@
                 <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
                 <img alt="scfail" src="../ben-and-alex.github.io/scfail.gif">
                 <img alt="dirtyfingers" src="../ben-and-alex.github.io/dirtyfingers.jpg">
-                <img alt="gpig" src="../ben-and-alex.github.io/gpig.wav">
+                <img alt="gpig" src="../ben-and-alex.github.io/gpig.wav" type="audio/wav">
             </content>
         </main>
         <footer>
