--- a/pics.html
+++ b/pics.html
@@ -25,7 +25,9 @@
                 <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
                 <img alt="scfail" src="../ben-and-alex.github.io/scfail.gif">
                 <img alt="dirtyfingers" src="../ben-and-alex.github.io/dirtyfingers.jpg">
-                <img alt="gpig" src="../ben-and-alex.github.io/gpig.wav" type="audio/wav">
+                <audio controls autoplay>
+                <source src="gpig.wav">
+                </audio>
             </content>
         </main>
         <footer>
