--- a/ben.html
+++ b/ben.html
@@ -5,6 +5,7 @@
         <meta name='viewport' content="width=device-width">
         <title>ben-and-alex | web page</title>
         <link href="../ben-and-alex.github.io/alex.css" type="text/css" rel="stylesheet" media="screen">
+        <p>jelltrole Inc.</p>
     </head>
     <body>
         <header class="bitcharoo">
@@ -20,6 +21,8 @@
         </main>
         <footer>
             <a href="../ben-and-alex.github.io/pics.html">the goods</a>
+            <a href="../ben-and-alex.github.io/coolpage.html">cool page</a>
+            <a href="../ben-and-alex.github.io/daemonsnipe.html">Daemon Snipe</a>
         </footer>
     </body>
 </html>
