--- a/ben.html
+++ b/ben.html
@@ -5,7 +5,7 @@
         <meta name='viewport' content="width=device-width">
         <title>ben-and-alex | web page</title>
         <link href="../ben-and-alex.github.io/alex.css" type="text/css" rel="stylesheet" media="screen">
-        <p>jelltrole Inc.</p>
+        <p>jelltrole inc.</p>
     </head>
     <body>
         <header class="bitcharoo">
@@ -13,7 +13,7 @@
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
-            <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
+            <img alt="my ass" src="../ben-and-alex.github.io/butt.JPG">
         </nav>
         <main>
             <content>
