--- a/pics.html
+++ b/pics.html
@@ -25,7 +25,7 @@
                 <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
                 <img alt="scfail" src="../ben-and-alex.github.io/scfail.gif">
                 <img alt="dirtyfingers" src="../ben-and-alex.github.io/dirtyfingers.jpg">
-                <audio controls autoplay loop>
+                <audio controls autoplay loop class="hamster">
                 <source src="gpig.wav">
                 </audio>
             </content>
