--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -23,6 +23,9 @@
         </main>
         <footer>
             Praise be unto Satan and all his Nipple-Bitches.
+            <audio autoplay>
+            <source src="fuckingawful.ftm" type="audio/ftm">
+            </audio>
         </footer>
     </body>
 </html>
