--- a/coolpage.html
+++ b/coolpage.html
@@ -26,9 +26,9 @@
         <footer>
             <img alt="coonsex" src="../ben-and-alex.github.io/coonsex.jpg">
             <img alt="sorry" src="../ben-and-alex.github.io/downwhithit.jpg">
-            <audio controls autoplay loop>
-                <source src="christjams.mp3">
-                </audio>
+            <audio controls autoplay loop class="christjams"> 
+            <source src="christjams.mp3">
+            </audio>
         </footer>
     </body>
 </html>
