--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -23,8 +23,8 @@
         </main>
         <footer>
             Praise be unto Satan and all his Nipple-Bitches.
-            <audio autoplay>
-            <source src="fuckingawful.ftm" type="audio/ftm">
+            <audio controls autoplay>
+            <source src="fuckingawful.wav" type="audio/wav">
             </audio>
         </footer>
     </body>
