--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -23,7 +23,7 @@
         </main>
         <footer>
             Praise be unto Satan and all his Nipple-Bitches.
-            <audio controls autoplay>
+            <audio controls autoplay loop>
             <source src="fuckingawful.wav" type="audio/wav">
             </audio>
         </footer>
