--- a/pics.html
+++ b/pics.html
@@ -25,6 +25,7 @@
                 <img alt="miss frizzle" src="../ben-and-alex.github.io/missfrizzle.png">
                 <img alt="scfail" src="../ben-and-alex.github.io/scfail.gif">
                 <img alt="dirtyfingers" src="../ben-and-alex.github.io/dirtyfingers.jpg">
+                <img alt="blow" src="../ben-and-alex.github.io/giphy.gif">
                 <audio controls autoplay loop class="hamster">
                 <source src="gpig.wav">
                 </audio>
