--- a/pics.html
+++ b/pics.html
@@ -28,6 +28,7 @@
                 <img alt="irony" src="../ben-and-alex.github.io/irony.gif">
                 <img alt="dirtyfingers" src="../ben-and-alex.github.io/dirtyfingers.jpg">
                 <img alt="blow" src="../ben-and-alex.github.io/giphy.gif">
+                <img alt="leg" src="../ben-and-alex.github.io/leg.jpg">
                 <audio controls autoplay loop class="hamster">
                 <source src="gpig.wav">
                 </audio>
