--- a/pics.html
+++ b/pics.html
@@ -29,6 +29,7 @@
                 <img alt="dirtyfingers" src="../ben-and-alex.github.io/dirtyfingers.jpg">
                 <img alt="blow" src="../ben-and-alex.github.io/giphy.gif">
                 <img alt="leg" src="../ben-and-alex.github.io/leg.jpg">
+                <img alt="updawg" src="../ben-and-alex.github.io/updawg.JPG">
                 <audio controls autoplay loop class="hamster">
                 <source src="gpig.wav">
                 </audio>
