--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="bitcharoo">
-            Once there was a gay clay Klan man named Cain after the laughter of his mistress. 
+            <p>In the time of chaos, when darkness enshrouded the Earth, one man, made of clay, rose to the occasion.</p> 
         </header>
         <nav id='mynav'>
             <noscript>*Javascript must be enabled to see this page.</noscript>
@@ -17,7 +17,9 @@
         <main>
             <content>
                 <img alt="crouch" src="../ben-and-alex.github.io/crouch.JPG">
+                <p>Though he had ambition, strength, and might, he suffered from the deepest of tragedies. He had a messy room.</p>
                 <img alt="room" src="../ben-and-alex.github.io/room.JPG">
+                <p>This room was guarded by the most sinister of poeple. The agents of chaos. The robes ministers of evil and their slave-boy Mumpkins.</p>
                 <img alt="philanthropods" src="../ben-and-alex.github.io/philanthropods.JPG">
             </content>
         </main>
