--- a/daemonsnipe.html
+++ b/daemonsnipe.html
@@ -19,7 +19,7 @@
                 <img alt="crouch" src="../ben-and-alex.github.io/crouch.JPG">
                 <p>Though he had ambition, strength, and might, he suffered from the deepest of tragedies. He had a messy room.</p>
                 <img alt="room" src="../ben-and-alex.github.io/room.JPG">
-                <p>This room was guarded by the most sinister of poeple. The agents of chaos. The robes ministers of evil and their slave-boy Mumpkins.</p>
+                <p>This room was guarded by the most sinister of poeple. The agents of chaos. The robed ministers of evil and their slave-boy Mumpkins.</p>
                 <img alt="philanthropods" src="../ben-and-alex.github.io/philanthropods.JPG">
             </content>
         </main>
